add voidzones
