# pkg/model/model.go
@@ -1,17 +1,20 @@
 package model
 
+import "github.com/drewkarpov/Jameson/pkg/image"
+
 type Project struct {
 	ID   string `json:"id" bson:"id"`
 	Name string `json:"name" bson:"name"`
 }
 
 type TestContainer struct {
-	ID          string `json:"id" bson:"id"`
-	Name        string `json:"name" bson:"name"`
-	ProjectId   string `json:"project_id" bson:"project_id"`
-	ReferenceId string `json:"reference_id" bson:"reference_id"`
-	Approved    bool   `json:"approved" bson:"approved"`
-	Tests       []Test `json:"tests" bson:"tests"`
+	ID          string           `json:"id" bson:"id"`
+	Name        string           `json:"name" bson:"name"`
+	ProjectId   string           `json:"project_id" bson:"project_id"`
+	ReferenceId string           `json:"reference_id" bson:"reference_id"`
+	Approved    bool             `json:"approved" bson:"approved"`
+	VoidZones   []image.VoidZone `json:"void_zones" bson:"void_zones"`
+	Tests       []Test           `json:"tests" bson:"tests"`
 }
 
 type Test struct {
